Update texts and translations

--- a/app/import/index.html
+++ b/app/import/index.html
@@ -25,7 +25,7 @@
 		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
 			<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 			<h2>Import</h2>
-			<h4 data-loc>You can create your import file here, see supported QR codes for more information.</h4>
+			<h4 data-loc>You can import your 2FA codes here, see supported QR codes for more information.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -67,8 +67,8 @@
 
 			<!-- create import file -->
 			<div class="mx-auto mb-10 w-2/3 rounded-2xl bg-gray-800">
-				<h3 class="pt-5" data-loc>Create import file</h3>
-				<h4 data-loc>Create your import file here. Choose the most convenient way for you.</h4>
+				<h3 class="pt-5" data-loc>Import codes</h3>
+				<h4 data-loc>You can import your 2FA codes many way Choose the most convenient way for you.</h4>
 				<div class="flex flex-col flex-wrap items-center justify-center gap-3">
 					<div class="chooseImages m-1">
 						<button class="buttoni" onclick="chooseImages()">
