--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -504,12 +504,12 @@
 								></a>
 								<span id="tgt8" class="text-xl text-black">-</span>
 							</div>
-							<!-- <hr />
+							<hr />
 							<div>
 								<h3>Backup</h3>
 								<h4>You can create backup codes and backup files.</h4>
 								<div class="flex flex-row flex-wrap justify-center gap-3">
-									<button class="buttoni" onclick="backupFile()">
+									<button class="buttoni" onclick="createBackupFile()">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
 											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 											<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
@@ -518,7 +518,7 @@
 										Create backup file
 									</button>
 
-									<button class="buttoni" onclick="backupFile()">
+									<button class="buttoni" onclick="loadBackupFile()">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
 											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 											<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
@@ -527,7 +527,7 @@
 										Load backup file
 									</button>
 								</div>
-							</div> -->
+							</div>
 						</div>
 					</div>
 				</div>
