--- a/app/application/index.html
+++ b/app/application/index.html
@@ -133,13 +133,13 @@
 			<h1 class="h1 mb-5">Authme</h1>
 			<div class="mx-auto hidden w-2/3 rounded-2xl bg-gray-800 pb-5" id="choose">
 				<h3 data-loc class="pt-3">Import your codes</h3>
-				<h4 data-loc>Create your import file from your 2FA codes, or if you have an import file choose it.</h4>
+				<h4 data-loc>Import your 2FA codes, or if you have an import file choose it.</h4>
 				<div class="flex flex-row flex-wrap items-center justify-center gap-3">
 					<button class="buttoni" onclick="createFile()">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+							<path stroke-linecap="round" stroke-linejoin="round" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 						</svg>
-						<span data-loc>Create import file</span>
+						<span data-loc>Import codes</span>
 					</button>
 					<button class="buttoni" id="input" onclick="loadFile()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
