Fix sort codes breaking settings page #199

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -160,7 +160,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 									</svg>
-									<span class="languageContentDefault pointer-events-none">Default</span>
+									<span class="pointer-events-none">Default</span>
 								</button>
 
 								<div id="languageContent" class="animation absolute right-0 z-20 mt-2 hidden w-72 overflow-hidden rounded-2xl border-2 border-white bg-white">
@@ -168,7 +168,7 @@
 										<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 										</svg>
-										<span data-loc class="languageContentDefault">Default</span>
+										<span data-loc>Default</span>
 									</a>
 									<a href="#" onclick="languageDropdownChoose('en')" class="block transform px-2 py-2 text-xl text-black no-underline duration-200 ease-in hover:bg-gray-600 hover:text-white">
 										<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" viewBox="0 0 36 36">
@@ -253,7 +253,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 									</svg>
-									<span data-loc class="sortDefault pointer-events-none">Default</span>
+									<span class="pointer-events-none">Default</span>
 								</button>
 
 								<div id="sortContent" class="animation absolute right-0 z-20 mt-2 hidden w-72 overflow-hidden rounded-2xl border-2 border-white bg-white">
@@ -261,7 +261,7 @@
 										<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 										</svg>
-										<span class="sortContentDefault">Default</span>
+										<span data-loc>Default</span>
 									</a>
 									<a href="#" onclick="sortDropdownChoose(1)" class="block transform px-2 py-2 text-xl text-black no-underline duration-200 ease-in hover:bg-gray-600 hover:text-white">
 										<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
