--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -317,13 +317,6 @@
 
 						<!-- shortcuts -->
 						<div id="shortcuts" class="tabcontent part hidden">
-							<h3 data-loc>Quick copy shortcuts</h3>
-							<h4 data-loc>You can create a shortcut for your most used codes to copy quickly. Shortcuts not work on this tab, go to any other settings tab to reactivate them!</h4>
-							<br />
-							<div class="quickShortcutsDiv">
-								<!-- quick shortcuts -->
-							</div>
-							<hr />
 							<h3 data-loc>Shortcuts</h3>
 							<h4 data-loc>You can modify the shortcuts here, read the documentation for more information. Shortcuts not work on this tab, go to any other settings tab to reactivate them!</h4>
 							<div class="shortcutsDiv">
@@ -340,6 +333,7 @@
 						<!-- experimental -->
 						<div id="experimental" class="tabcontent part hidden">
 							<div class="mx-auto mt-5 rounded-2xl bg-gray-800 md:w-4/5 lg:w-2/3">
+								<h3 class="relative top-7">Experimental features</h3>
 								<h4 class="pt-5" data-loc>These features are under development and can be unstable! Use it at your own risk!</h4>
 								<button class="buttoni mb-8" onclick="experimentalDocs()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -379,7 +373,7 @@
 										Create backup file
 									</button>
 
-									<button class="buttoni" onclick="loadBackupFile()">
+									<button class="buttoni" onclick="loadBackupFileDialog()">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
 											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 											<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
