Improved shortcut handling

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -317,23 +317,23 @@
 
 						<!-- shortcuts -->
 						<div id="shortcuts" class="tabcontent part hidden">
-							<h3 data-loc>Shortcuts</h3>
-							<h4 data-loc>You can modify the shortcuts here, read the documentation for more information. Shortcuts not work on this tab, go to any other settings tab to reactivate them!</h4>
-							<div class="shortcutsDiv">
-								<!-- shortcuts -->
-							</div>
-							<hr />
 							<h3 data-loc>Global shortcuts</h3>
-							<h4 data-loc>You can modify the global shortcuts here, read the documentation for more information. Shortcuts not work on this tab, go to any other settings tab to reactivate them!</h4>
+							<h4 data-loc>You can use these shortcuts everywhere, even outside the application. Use english characters only, during editing shortcuts don't work.</h4>
 							<div class="globalShortcutsDiv">
 								<!-- global shortcuts -->
+							</div>
+							<hr />
+							<h3 data-loc>Shortcuts</h3>
+							<h4 data-loc>You can use these shortcuts inside the application only. Use english characters only, during editing shortcuts don't work.</h4>
+							<div class="shortcutsDiv">
+								<!-- shortcuts -->
 							</div>
 						</div>
 
 						<!-- experimental -->
 						<div id="experimental" class="tabcontent part hidden">
 							<div class="mx-auto mt-5 rounded-2xl bg-gray-800 md:w-4/5 lg:w-2/3">
-								<h3 class="relative top-7">Experimental features</h3>
+								<h3 class="relative top-7" data-loc>Experimental features</h3>
 								<h4 class="pt-5" data-loc>These features are under development and can be unstable! Use it at your own risk!</h4>
 								<button class="buttoni mb-8" onclick="experimentalDocs()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
