--- a/app/import/index.html
+++ b/app/import/index.html
@@ -9,7 +9,6 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
 	<body>
 		<!-- build number -->
@@ -81,7 +80,19 @@
 							</svg>
 							<span data-loc>Choose images</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4">Choose images that contain a 2FA QR code.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4">Choose images that contain a 2FA QR code.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip -mt-16">
+									Takeing a screenshot: <br />
+									Windows: Windows + Shift + S <br />
+									macOS: Shift + Command + 3
+								</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
 					<div class="useWebcam m-1">
 						<button class="buttoni" onclick="useWebcam()">
@@ -93,9 +104,17 @@
 							</svg>
 							<span data-loc>Use webcam</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4">Use your webcam to scan 2FA QR codes.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4">Use your webcam to scan a 2FA QR code.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip">Make sure no program uses your webcam.</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
-					<div class="screenCapture m-1 hidden">
+					<div class="screenCapture m-1">
 						<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
 								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -106,11 +125,23 @@
 							</svg>
 							<span data-loc>Capture screen</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip -mt-16">
+									This is a preview feature! <br />
+									Make sure that the picture is visible <br />
+									under the application window.
+								</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
 				</div>
 				<!-- video -->
-				<video id="qrVideo" class="mx-auto mb-8 hidden" autoplay></video>
+				<video id="qrVideo" class="mx-auto mb-8 hidden w-4/5 rounded-2xl bg-white p-2" autoplay></video>
 				<button class="buttoni mb-8 hidden" id="qrStop">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
