Show the captured picture #161

--- a/app/import/index.html
+++ b/app/import/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- meta -->
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:" />
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
@@ -148,6 +148,17 @@
 					</svg>
 					<span data-loc>Stop</span>
 				</button>
+				<!-- img -->
+				<div class="thumbnailContainer hidden pb-8">
+					<img class="thumbnail mx-auto w-4/5 rounded-2xl bg-white p-2" src="" />
+
+					<button class="buttoni removeThumbnail mt-8">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+						</svg>
+						<span>Hide</span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</body>
