--- a/app/import/index.html
+++ b/app/import/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 	<head>
 		<!-- meta -->
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:" />
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
 	<body>
 		<!-- build number -->
@@ -25,7 +24,7 @@
 		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
 			<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 			<h2>Import</h2>
-			<h4 data-loc>You can create your import file here, see supported QR codes for more information.</h4>
+			<h4 data-loc>You can import your 2FA codes here, see supported QR codes for more information.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -67,8 +66,8 @@
 
 			<!-- create import file -->
 			<div class="mx-auto mb-10 w-2/3 rounded-2xl bg-gray-800">
-				<h3 class="pt-5" data-loc>Create import file</h3>
-				<h4 data-loc>Create your import file here. Choose the most convenient way for you.</h4>
+				<h3 class="pt-5" data-loc>Import codes</h3>
+				<h4 data-loc>You can import your 2FA codes many way Choose the most convenient way for you.</h4>
 				<div class="flex flex-col flex-wrap items-center justify-center gap-3">
 					<div class="chooseImages m-1">
 						<button class="buttoni" onclick="chooseImages()">
@@ -81,7 +80,19 @@
 							</svg>
 							<span data-loc>Choose images</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4">Choose images that contain a 2FA QR code.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4">Choose images that contain a 2FA QR code.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip -mt-16">
+									Takeing a screenshot: <br />
+									Windows: Windows + Shift + S <br />
+									macOS: Shift + Command + 3
+								</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
 					<div class="useWebcam m-1">
 						<button class="buttoni" onclick="useWebcam()">
@@ -93,9 +104,17 @@
 							</svg>
 							<span data-loc>Use webcam</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4">Use your webcam to scan 2FA QR codes.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4">Use your webcam to scan a 2FA QR code.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip">Make sure no program uses your webcam.</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
-					<div class="screenCapture m-1 hidden">
+					<div class="screenCapture m-1">
 						<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
 								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -106,17 +125,40 @@
 							</svg>
 							<span data-loc>Capture screen</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
+						<div class="flex flex-row gap-3">
+							<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
+							<div class="tooltipContainer">
+								<span class="tooltip -mt-16">
+									This is a preview feature! <br />
+									Make sure that the picture is visible <br />
+									under the application window.
+								</span>
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+								</svg>
+							</div>
+						</div>
 					</div>
 				</div>
 				<!-- video -->
-				<video id="qrVideo" class="mx-auto mb-8 hidden" autoplay></video>
+				<video id="qrVideo" class="mx-auto mb-8 hidden w-4/5 rounded-2xl bg-white p-2" autoplay></video>
 				<button class="buttoni mb-8 hidden" id="qrStop">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
 					<span data-loc>Stop</span>
 				</button>
+				<!-- img -->
+				<div class="thumbnailContainer hidden pb-8">
+					<img class="thumbnail mx-auto w-4/5 rounded-2xl bg-white p-2" src="" />
+
+					<button class="buttoni removeThumbnail mt-8">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+						</svg>
+						<span>Hide</span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</body>
