--- a/app/import/index.html
+++ b/app/import/index.html
@@ -50,15 +50,13 @@
 					<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 						<h4 data-loc class="m-0 mb-3">TOTP 2FA QR code</h4>
 						<h5 data-loc class="m-0">A TOTP QR code is that you find mostly everywhere, if you want to setup 2FA.</h5>
-						<h5 data-loc class="m-0">Example: (Google, Facebook, Microsoft).</h5>
-						<h5 data-loc class="m-0">Starts with: (otpauth://totp/).</h5>
+						<h5 data-loc class="m-0">Example: Google, Facebook, Microsoft, etc.</h5>
 						<a data-loc class="link pt-3 !text-lg" href="#totp" onclick="totpLink()">Detailed steps</a>
 					</div>
 					<div class="my-3 mr-3 ml-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
-						<h4 data-loc class="m-0 mb-3">Migration 2FA QR code</h4>
-						<h5 data-loc class="m-0">A migration QR code is what you can export, and contains all of your already imported codes.</h5>
-						<h5 data-loc class="m-0">Example: (Google Authenticator).</h5>
-						<h5 data-loc class="m-0">Starts with: (otpauth-migration://).</h5>
+						<h4 data-loc class="m-0 mb-3">Google Authenticator 2FA QR code</h4>
+						<h5 data-loc class="m-0">A Google Authenticator code is what you can export, and contains all of your already imported codes.</h5>
+						<h5 data-loc class="m-0">Example: Google Authenticator.</h5>
 						<a data-loc class="link pt-3 !text-lg" href="#migration" onclick="migrationLink()">Detailed steps</a>
 					</div>
 				</div>
