--- a/app/import/index.html
+++ b/app/import/index.html
@@ -132,7 +132,7 @@
 								</svg>
 								<span data-loc>Capture screen</span>
 							</button>
-							<div class="flex flex-row gap-3">
+							<div class="flex flex-row justify-center gap-3">
 								<h5 data-loc class="m-0 pt-4 pb-4">Capture a 2FA QR code from your screen.</h5>
 								<div class="tooltipContainer">
 									<span class="tooltip -mt-[48px] w-max text-base">
@@ -173,7 +173,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
-					<span data-loc>Stop</span>
+					<span>Stop</span>
 				</button>
 				<!-- img -->
 				<div class="thumbnailContainer hidden pb-8">
@@ -183,7 +183,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 						</svg>
-						<span>Hide</span>
+						<span data-loc>Hide</span>
 					</button>
 				</div>
 			</div>
