Request from main process #208

--- a/app/import/index.html
+++ b/app/import/index.html
@@ -130,13 +130,13 @@
 									<line x1="9" y1="16" x2="9" y2="20"></line>
 									<line x1="15" y1="16" x2="15" y2="20"></line>
 								</svg>
-								<span data-loc>Capture screen</span>
+								<span class="screenButton" data-loc>Capture screen</span>
 							</button>
 							<div class="flex flex-row justify-center gap-3">
 								<h5 data-loc class="m-0 pt-4 pb-4">Capture a 2FA QR code from your screen.</h5>
 								<div class="tooltipContainer">
 									<span class="tooltip -mt-[48px] w-max text-base">
-										You will have 5 seconds to navigate to the QR code you want to import. <br />
+										You will have 10 seconds to navigate to the QR code you want to import. <br />
 										Authme will capture your screen and import the QR code.
 									</span>
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
