Small stye fixes

--- a/app/import/index.html
+++ b/app/import/index.html
@@ -191,7 +191,7 @@
 
 		<!-- manual entry dialog -->
 		<dialog class="dialog dialog0 w-2/5">
-			<h2>Manual entry</h2>
+			<h2 class="-mt-5">Manual entry</h2>
 			<h4>Please enter the 2FA secret and name!</h4>
 
 			<div class="mt-10 flex flex-col items-center justify-center">
