Fix styles in small screens

--- a/app/export/index.html
+++ b/app/export/index.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="relative m-auto mt-20 mb-60 rounded-2xl bg-gray-700 p-1 text-center md:w-11/12 xl:w-3/5">
+		<div class="relative m-auto mt-20 mb-60 w-3/5 rounded-2xl bg-gray-700 p-1 text-center">
 			<!-- before export -->
 			<div class="before_export mx-auto mt-20 mb-20 w-2/3 rounded-2xl bg-gray-800 pb-1">
 				<h3 data-loc class="pt-5">Export codes</h3>
@@ -52,7 +52,7 @@
 					<h3 data-loc class="pt-5">Save exported codes</h3>
 					<h4 data-loc>You can save your exported 2FA codes, so you can use them elsewhere, and keeping a backup of your codes is always a good idea.</h4>
 
-					<div class="flex flex-row justify-center pb-3">
+					<div class="small:flex-wrap flex flex-row justify-center pb-3">
 						<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 							<h4 data-loc class="m-0 mb-3">Export .authme file</h4>
 							<h5 data-loc class="m-0 mb-3">Ideal to import for Authme or other Authme apps.</h5>
