--- a/app/import/index.html
+++ b/app/import/index.html
@@ -46,7 +46,7 @@
 					<span data-loc>Examples</span>
 				</button>
 
-				<div class="flex flex-row justify-center pb-5">
+				<div class="small:flex-wrap flex flex-row justify-center pb-5">
 					<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 						<h4 data-loc class="m-0 mb-3">TOTP 2FA QR code</h4>
 						<h5 data-loc class="m-0">A TOTP QR code is that you find mostly everywhere, if you want to setup 2FA.</h5>
