--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -6,9 +6,9 @@
 		<!-- js -->
 		<script defer src="./index.js"></script>
 		<!-- css -->
+		<link rel="stylesheet" href="./index.css" />
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
 	<body>
 		<div class="flex h-screen">
@@ -214,12 +214,6 @@
 									</svg>
 									<span data-loc>Latest log</span>
 								</button>
-								<button class="buttoni" onclick="logsFolder()">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 19a2 2 0 01-2-2V7a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1M5 19h14a2 2 0 002-2v-5a2 2 0 00-2-2H9a2 2 0 00-2 2v5a2 2 0 01-2 2z" />
-									</svg>
-									<span data-loc>Logs folder</span>
-								</button>
 							</div>
 							<hr />
 							<h3 data-loc>Clear data</h3>
@@ -310,12 +304,6 @@
 							<h4 data-loc>You can use these shortcuts everywhere, even outside the application. Use english characters only, during editing shortcuts don't work.</h4>
 							<div class="globalShortcutsDiv">
 								<!-- global shortcuts -->
-							</div>
-							<hr />
-							<h3 data-loc>Shortcuts</h3>
-							<h4 data-loc>You can use these shortcuts inside the application only. Use english characters only, during editing shortcuts don't work.</h4>
-							<div class="shortcutsDiv">
-								<!-- shortcuts -->
 							</div>
 						</div>
 
