Remove close window buttons

--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -21,16 +21,10 @@
 		</div>
 
 		<!-- header -->
-		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
+		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 pb-1 text-center">
 			<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 			<h2 data-loc>Edit codes</h2>
 			<h4 data-loc>You can edit or delete your existing codes and you can add more codes.</h4>
-			<button class="buttoni mb-6" onclick="hide()">
-				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-				</svg>
-				<span data-loc>Close window</span>
-			</button>
 		</div>
 
 		<!-- content -->
