--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -26,7 +26,7 @@
 
 			<div class="chooseLogin mx-auto mb-20 w-2/3 rounded-2xl bg-gray-800">
 				<h3 data-loc class="pt-5">Welcome to Authme!</h3>
-				<h4 data-loc>Choose how you want to use Authme. Your 2FA codes are encrypted either way.</h4>
+				<h4 data-loc>Choose how you want to use Authme.</h4>
 
 				<div class="small:flex-wrap flex flex-row justify-center pb-3">
 					<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
@@ -41,7 +41,7 @@
 						</button>
 					</div>
 					<div class="my-3 mr-3 ml-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
-						<h4 data-loc class="m-0 mb-3">Don't require password</h4>
+						<h4 data-loc class="m-0 mb-3">No password</h4>
 						<h5 data-loc class="m-0 mb-3">If you don't want to type in your password every time you launch Authme.</h5>
 
 						<button onclick="noPassword()" class="buttoni my-2">
